<resources>
    <!-- AppName -->
    <string name="app_name" translatable="false">GreenHouse</string>

    <!-- Bottom Navigation -->
    <string name="bottom_nav_home">Accueil</string>
    <string name="bottom_nav_settings">Paramètre</string>

    <!-- Preference -->
    <string name="preferences_greenhouse">Serre</string>
    <string name="preferences_enable">Activer</string>
    <string name="preferences_disable">Désactiver</string>
    <string name="preferences_herb">Aromate</string>
    <string name="preferences_settings_default">Paramètre par défault</string>
    <string name="preferences_advanced">Paramètre avancé</string>
    <string name="preferences_app">Application</string>
    <string name="preferences_network">Réseau</string>
    <string name="preferences_about">Version</string>
    <string name="preferences_about_version" translatable="false">1.0-21w19a</string>

    <!-- Brightness -->
    <string name="preference_greenhouse_brightness">Luminosité (en lumen)</string>
    <string name="preference_greenhouse_brightness_min">Luminosité minimum</string>
    <string name="preference_greenhouse_brightness_max">Luminosité maximum</string>

    <!-- Temperature -->
    <string name="preference_greenhouse_temperature">Température (en °C)</string>
    <string name="preference_greenhouse_temperature_min">Température minimum</string>
    <string name="preference_greenhouse_temperature_max">Température maximum</string>

    <!-- Humidity Air -->
    <string name="preference_greenhouse_humidity_air">Humidité de l\'air (en %)</string>
    <string name="preference_greenhouse_humidity_air_min">Humidité de l\'air minimum</string>
    <string name="preference_greenhouse_humidity_air_max">Humidité de l\'air maximum</string>

    <!-- Earth Moisture -->
    <string name="preference_greenhouse_earth_moisture">Humidité du sol (en %)</string>
    <string name="preference_greenhouse_earth_moisture_min">Humidité du sol minimum</string>
    <string name="preference_greenhouse_earth_moisture_max">Humidité du sol maximum</string>

    <!-- OnBoarding -->
    <string name="welcome_screen_title">Bienvenue</string>
    <string name="welcome_screen_image_description">Logo</string>
    <string name="onBoarding_screen_next">Suivant</string>
    <string name="permission_screen_title">Camera</string>
    <string name="permission_screen_subtitle">Autoriser la caméra pour scanner les QR Code</string>
    <string name="permission_screen_button">Autoriser</string>
    <string name="greenhouse_screen_title">Serre</string>
    <string name="greenhouse_screen_subtitle">Scanner le QR Code pour ajouter une serre</string>
    <string name="greenhouse_screen_button">Scanner</string>
    <string name="finish_screen_title">C\'est fini</string>
    <string name="finish_screen_subtitle">La configuration de l\'application est terminé</string>
    <string name="onBoarding_screen_finish">Terminer</string>
</resources>