<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        android:key="brightness"
        android:title="@string/preference_greenhouse_brightness"
        app:iconSpaceReserved="false"
        app:useSimpleSummaryProvider="true"/>

    <EditTextPreference
        android:key="temperature"
        android:title="@string/preference_greenhouse_temperature"
        app:iconSpaceReserved="false"
        app:useSimpleSummaryProvider="true" />

    <SeekBarPreference
        android:key="humidity_air"
        android:title="@string/preference_greenhouse_humidity_air"
        app:iconSpaceReserved="false"
        app:showSeekBarValue="true"/>

    <SeekBarPreference
        android:key="earth_moisture"
        android:title="@string/preference_greenhouse_earth_moisture"
        app:iconSpaceReserved="false"
        app:showSeekBarValue="true"/>

</PreferenceScreen>